2006-05-17  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/QSort.java (doDictionary):
        Fix lsort -dictionary bug where strings of
        differing lengths were not sorting correctly.
        The sort order logic now works like C Tcl 8.4.
        * tests/tcl/lsort.test: Add Tcl test cases for
        lsort -dictionary from Tcl 8.4.

2006-05-16  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tests/jacl/tcl/lang/JaclSetInterrupted.java:
        * src/tjc/tcl/lang/TJC.java (invoke): Add
        missing checkInterrupted() call so that compiled
        code can be interrupted.
        * tests/jacl/SetInterrupted.tcl:
        * tests/jacl/SetInterrupted.test: Add test
        case for interruption of TJC compiled code.

2006-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/tjc/tjc/library/module.tcl (module_parse):
        Fixup backslash processing bug where lines that
        appear after the first do not have the backslash
        removed and result in a parse error.
        * tests/tjc/module.test: Add test case for
        backslash processing bug.

2006-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

        * src/jacl/tcl/lang/ExprValue.java: Comment fixup.
        * src/jacl/tcl/lang/TclList.java (toString):
        Don't allocate a StringBuffer for an empty list.
        * src/tcljava/tcl/lang/FuncSig.java
        (getAccessibleConstructors): Fix minor bug where
        no accessible constructors could lead to a NPE.
        * src/tcljava/tcl/lang/TclObjectBase.java (toString,
        duplicate): Minor disposed object optimizations.
        * src/tests/tjc/TestTJC.java: Comment fixups.
        * tests/tcljava/FuncSig.test: Add test case
        for getAccessibleConstructors NPE.

2006-05-15  Mo DeJong  <mdejong@users.sourceforge.net>

        Regenerate files that include version numbers
        because vsub.sh incorrectly wrote files with
        CRLF translation.

        * configure.in: