@@ -9,7 +9,7 @@
 # See the file "license.terms" for information on usage and redistribution
 # of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 #
-# RCS: @(#) $Id: JavaNewCmd.test,v 1.6 2006/04/10 21:13:57 mdejong Exp $
+# RCS: @(#) $Id: JavaNewCmd.test,v 1.7 2006/04/13 07:36:51 mdejong Exp $
 
 if {[lsearch [namespace children] ::tcltest] == -1} {
     package require tcltest
@@ -444,8 +444,9 @@ test javaNewCmd-7.0 {parse Java type from String} {
         [[java::new Boolean 0x1] toString] \
         [[java::new Boolean 0] toString] \
         [[java::new Boolean 01] toString] \
-        [[java::new Boolean -0] toString]
-} {true false true false true false}
+        [[java::new Boolean -0] toString] \
+        [[java::new java.lang.Boolean 0x1] toString]
+} {true false true false true false true}
 
 test javaNewCmd-7.1 {parse Java type from String} {
     list \
